# linkzone_webapp

./: Dokerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py  start.sh
app/: __init__.py  fnService.py  schemas.py  views.py
app/static/styles/: App.CazRCUVc.js  App.DnRFg7Dr.js  App.fBq4_ewj.js  index.B6L-vUl7.css
app/templates/: index.html
frontend/: .gitignore  astro.config.mjs  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: config.js
frontend/src/components/: App.jsx  Card.jsx  Loading.jsx  Spinner.jsx  Ussd.jsx
frontend/src/layouts/: Layout.astro
frontend/src/pages/: index.astro
frontend/src/types/: LinkZone.js
