[tool.poetry]
name = "fastapi-mr4g"
version = "0.1.0"
description = ""
authors = ["Yakciel Lopez Chaviano <ylchaviano@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
jinja2 = "^3.1.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
